--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "release": "ng build --prod --aot=false --build-optimization=false"
+    "release": "ng build --prod --buildOptimizer=true --output-hashing=all"
   },
   "private": true,
   "dependencies": {
